--- a/index.html
+++ b/index.html
@@ -96,6 +96,12 @@
                             <a><div class="hover_text">FaceDetection With Python</div></a>
                         </div>
                     </div>
+                    <div class="project_images">
+                        <img src="images/covid.png"/>
+                        <div class="overlay">
+                            <a><div class="hover_text">COVID TRACKER</div></a>
+                        </div>
+                    </div>
                 </div>
             </section>
             <section id="exp">
