--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <div class="project_images">
                         <img src="images/covid.png"/>
                         <div class="overlay">
-                            <a><div class="hover_text">COVID TRACKER</div></a>
+                            <a href="https://covid-19-tracker-8ab89.web.app/" target="_blank"><div class="hover_text">COVID TRACKER</div></a>
                         </div>
                     </div>
                 </div>
