Updated Amazon website link

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <div class="project_images">
                         <img src="images/amazon.png"/>
                         <div class="overlay">
-                            <a href="https://clone-5a59a.web.app/" target="_blank"><div class="hover_text">Amazon Clone</div></a>
+                            <a href="" target="_blank"><div class="hover_text">Amazon Clone</div></a> <!-- https://clone-5a59a.web.app/ -->
                         </div>
                     </div>
                     <div class="project_images">
